<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_plantbase">


    <fragment
        android:id="@id/navigation_plantbase"
        android:name="com.fruit.mvvm.ui.plantbase.PlantBaseFragment"
        android:label="@string/plant_base"
        tools:layout="@layout/plant_base_fragment"
        >
    </fragment>

    <fragment
        android:id="@id/navigation_map"
        android:name="com.fruit.mvvm.ui.map.MapFragment"
        android:label="@string/current_position"
        tools:layout="@layout/fragment_map" >
    </fragment>

    <fragment
        android:id="@id/navigation_personal"
        android:name="com.fruit.mvvm.ui.personal.PersonalFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_personal" >
    </fragment>

</navigation>