<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/gainsboro"
            android:fitsSystemWindows="true"
            android:gravity="center">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/personal_center" />


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="40dp"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
                    <!-- add a Image image.png in your Drawable folder -->
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/cutecat" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="30sp"
                    android:text=""
                    android:textSize="20sp"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/plant_detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corner"
            android:clipToPadding="false"
            android:fadingEdge="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"

            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/my_attention"
                            android:textAlignment="center">
                        </com.google.android.material.textview.MaterialTextView>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/money"
                        android:textAlignment="center" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_marginTop="16dp"
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_information"
                    android:layout_margin="16dp"
                    >
                </com.google.android.material.textview.MaterialTextView>


                <View

                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_address"
                    android:layout_margin="16dp"
                    >
                </com.google.android.material.textview.MaterialTextView>



                <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_service"
                    android:layout_margin="16dp"
                    >
                </com.google.android.material.textview.MaterialTextView>

                <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>